# Workshops

Learn TDD/: Learn TDD Workshop.md
Learn TDD/lession1/: README.md  pyproject.toml
Learn TDD/lession1/src/: lession1.py
Learn TDD/lession1/tests/: lession1_test.py
Learn TDD/lession2/: README.md  main.py  pyproject.toml
Learn TDD/lession2/tests/: lession2_test.py
TDD Three Ways/: TDD Three Ways.odp
